# 2025-Team-H-Repository

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: database.py  main.py  utils.py
backend/app/models/: __init__.py  models.py  timetable.py  user.py
backend/app/routes/: Approval.py  auth.py  class_groups.py  classes.py  classgroups.py  logs.py  rooms.py  subject.py  timetable.py  timetables.py  users.py
backend/app/schemas/: Approval.py  __init__.py  class_group.py  classes.py  classgroup.py  room.py  subject.py  timetable.py  users.py
frontend/: package-lock.json  package.json
frontend/src/Interfaces/: Class.ts  Room.ts  Users.ts  users.ts
frontend/src/Interfaces/auth/: registerData.ts  token.ts  user.ts  userRole.ts
frontend/src/Stores/: ClassesStore.ts  RoomStore.ts  authStore.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: AdminDashboard.svelte  Navbar.svelte  Sidebar.svelte  UserLoginForm.svelte  UserRegisterForm.svelte  UsersTable.svelte
frontend/src/lib/stores/: auth.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/Rooms/: +page.svelte
frontend/src/routes/admin-dashboard/: +page.svelte
frontend/src/routes/classgroups/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/home/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/professor/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/timetable/: +page.svelte
src/lib/: api.ts
