[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.10.6",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]
